--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -311,7 +311,7 @@ button:hover {
 }
 
 @media only screen and (max-width: 1000px) {
-	.sitePopup .infoContainer {
+	#sitePopup .infoContainer {
 		width: 100%;
 		height: 100%;
 	}
