--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -206,12 +206,10 @@ button:hover {
 	background-color: var(--background);
 	padding: 1rem;
 	border: 1px solid #888;
-	width: 500px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	min-width: 300px;
-	min-height: 400px;
 	width: 55%;
 	height: 85%;
 }
@@ -280,13 +278,11 @@ button:hover {
 	background-color: var(--background);
 	padding: 1rem;
 	border: 1px solid #888;
-	width: 500px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	overflow: auto;
 	min-width: 300px;
-	min-height: 400px;
 	width: 25%;
 	height: 55%;
 }
@@ -312,14 +308,14 @@ button:hover {
 	text-decoration: none;
 }
 /**-----------------------------------------------**/
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 450px), only screen and (max-height: 550px) {
 	#infoPopup .infoContainer {
 		width: 100%;
 		height: 100%;
 	}
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1000px), only screen and (max-height: 650px) {
 	#sitePopup .infoContainer {
 		width: 100%;
 		height: 100%;
