--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -137,6 +137,17 @@ button {
 button:hover {
 	background-color: var(--buttonHoverColor);
 }
+
+#searchbar {
+	background-color: var(--background);
+	color: var(--textColor);
+	padding: 8px;
+	width: 200px;
+	font-size: 16px;
+	border: none;
+	border-radius: 4px;
+	box-shadow: var(--borderShadowColorEffect);
+}
 /**-----------------------------------------------**/
 td {
 	width: 62px;
