--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -138,8 +138,10 @@ button {
 	margin: 4px 2px;
 	cursor: pointer;
 	border-radius: 4px;
-	transition: 0.5s;
+	transition: 0.3s;
+	box-shadow: var(--borderShadowColorEffect);
 }
+
 button:hover {
 	background-color: var(--buttonHoverColor);
 }
@@ -152,7 +154,12 @@ button:hover {
 	font-size: 16px;
 	border: none;
 	border-radius: 4px;
+	transition: 0.3s;
 	box-shadow: var(--borderShadowColorEffect);
+}
+
+#searchbar:hover {
+	background-color: var(--buttonHoverColor);
 }
 /**-----------------------------------------------**/
 td {
