--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -264,9 +264,8 @@ td {
 .elementsClassVew {
 	display: flex;
 	width: 100%;
-	height: 100%;
     flex-wrap: wrap;
-	align-content: center;
+	align-content: flex-start;
 	justify-content: center;
 }
 
@@ -274,19 +273,16 @@ td {
 	width: 40%;
 	height: 15%;
 	margin: 3px;
+	text-align: center;
 	transition: 0.3s;
 	box-shadow: var(--borderShadowColorEffect);
 }
 
-.elementsClassVew .highlightElementBlocks {
-	width: 40%;
-	height: 40%;
-	margin: 3px;
-	text-align: center;
-	font-weight: 1000;
+html:not([class*="blocks"]) .highlightElementBlocks {
+	display: none;
 }
 
-html:not([class*="blocks"]) .elementsClassVew .highlightElementBlocks {
+html:is([class*="blocks"]) .highlightElementClasses {
 	display: none;
 }
 
