--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -132,7 +132,7 @@ h1 {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 /**-----------------------------------------------**/
-button, #visualizeOption {
+button, select {
 	display: inline-block;
 	background-color: var(--buttonColor);
 	border: none;
@@ -148,23 +148,33 @@ button, #visualizeOption {
 	box-shadow: var(--borderShadowColorEffect);
 }
 
-button:hover, #visualizeOption:hover {
-	background-color: var(--buttonHoverColor);
-}
-
-#searchbar {
-	background-color: var(--background);
+input[type="text"], input[type="number"] {
+	background-color: transparent;
 	color: var(--textColor);
 	padding: 8px;
-	width: 200px;
-	font-size: 16px;
+	font-size: 14px;
 	border: none;
 	border-radius: 4px;
 	transition: 0.3s;
 	box-shadow: var(--borderShadowColorEffect);
 }
 
-#searchbar:hover {
+input[type="range"] {
+	appearance: none;
+	-webkit-appearance: none;
+	background: transparent;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  background: var(--buttonColor);
+  box-shadow: var(--borderShadowColorEffect);
+}
+
+button:hover, select:hover {
+	background-color: var(--buttonHoverColor);
+}
+
+input[type="text"]:hover, input[type="number"]:hover {
 	box-shadow: var(--borderShadowColorEffectHover);
 }
 /**-----------------------------------------------**/
