--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -177,6 +177,57 @@ button:hover, select:hover {
 input[type="text"]:hover, input[type="number"]:hover {
 	box-shadow: var(--borderShadowColorEffectHover);
 }
+
+#PropertyKey {
+	display: none;
+    justify-content: center;
+}
+
+#PropertyKey input[type="radio"] {
+	display: none;
+}
+
+#PropertyKey label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  box-shadow: var(--borderShadowColorEffect);
+  cursor: pointer;
+  user-select: none;
+  position: relative;
+  font-size: 14px;
+  color: inherit;
+}
+
+#PropertyKey label::before {
+	content: "";
+	display: block;
+	width: 50%;
+	height: 50px;
+	font-size: 32px;
+	margin-bottom: 8px;
+	position: static;
+	background-repeat: no-repeat;
+	background-size: contain;
+}
+
+#PropertyKey input[type="radio"]:checked + label {
+	background: var(--buttonColor);
+	color: #ffffff;
+}
+
+[for="Linear"]::before {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3Cmarker id='arrow' markerWidth='10' markerHeight='10' refX='5' refY='5' orient='auto'%3E%3Cpolyline points='3,3 5,5 3,7' fill='none' stroke='%23555'/%3E%3C/marker%3E%3C/defs%3E%3Cg stroke='%23555' stroke-width='3'%3E%3Cline x1='10' y1='100' x2='10' y2='10' marker-end='url(%23arrow)'/%3E%3Cline x1='0' y1='90' x2='90' y2='90' marker-end='url(%23arrow)'/%3E%3Cline x1='10' y1='90' x2='90' y2='10'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+[for="logarithmic"]::before {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3Cmarker id='arrow' markerWidth='10' markerHeight='10' refX='5' refY='5' orient='auto'%3E%3Cpolyline points='3,3 5,5 3,7' fill='none' stroke='%23555'/%3E%3C/marker%3E%3C/defs%3E%3Cg stroke='%23555' stroke-width='3'%3E%3Cline x1='10' y1='100' x2='10' y2='10' marker-end='url(%23arrow)'/%3E%3Cline x1='0' y1='90' x2='90' y2='90' marker-end='url(%23arrow)'/%3E%3Cpath d='M10,90 Q20,20 90,20' fill='none'/%3E%3C/g%3E%3C/svg%3E");
+}
+
 /**-----------------------------------------------**/
 td {
 	width: 62px;
@@ -231,8 +282,6 @@ td {
     font-size: 0.85em;
     font-weight: 300;
     font-style: normal;
-	/*overflow: hidden;*/
-	/*text-overflow: ellipsis;*/
 }
 
 .element abbr, .elementStyle abbr {
@@ -289,7 +338,7 @@ html:not([class*="blocks"]) .highlightElementBlocks {
 	display: none;
 }
 
-html:is([class*="blocks"]) .highlightElementClasses {
+html:not([class*="chemicalGroupBlock"]) .highlightElementClasses {
 	display: none;
 }
 
@@ -348,7 +397,6 @@ html:is([class*="blocks"]) .highlightElementClasses {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	min-width: 300px;
-	/**min-height: 400px;**/
 	width: 55%;
 	height: 85%;
 }
@@ -421,7 +469,6 @@ html:is([class*="blocks"]) .highlightElementClasses {
 	transform: translate(-50%, -50%);
 	overflow: auto;
 	min-width: 300px;
-	/**min-height: 100px;**/
 	width: 25%;
 	height: 55%;
 }
