--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -252,11 +252,19 @@ input[type="text"]:hover, input[type="number"]:hover {
 }
 
 /**-----------------------------------------------**/
+table {
+	table-layout: fixed;
+	border-collapse: collapse;
+}
+
 td {
-	width: 62px;
-	height: 62px;
-	min-width: 62px;
-	min-height: 62px;
+	height: 64px;
+	width: 64px;
+	max-width: 64px;
+	max-height: 64px;
+	min-width: 64px;
+	min-height: 64px;
+	padding: 2px;
 }
 
 .groups td {
@@ -284,17 +292,13 @@ td {
 	box-shadow: var(--borderShadowColorEffect);
 	transition: var(--transitionTime);
 }
-
-html:not([class*="blocks"]):not([class*="chemicalGroupBlock"]) .lanth-Act {
-	background: transparent;
-}
 /**--------------------**/
 .element, .elementStyle {
     line-height: 1;
     font-style: normal;
     font-weight: normal;
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     padding: 2px;
     transition: var(--transitionTime);
     display: flex;
@@ -347,6 +351,18 @@ html:not([class*="blocks"]):not([class*="chemicalGroupBlock"]) .lanth-Act {
 .elementStyle:not(.empty):active {
     box-shadow: var(--borderShadowColorEffectClick);
 }
+
+html:not(.blocks, .chemicalGroupBlock) .lanth-Act {
+	background: transparent;
+}
+
+html:not(.blocks, .chemicalGroupBlock) td:has(> .element, > .lanth-Act) {
+	padding: 0;
+}
+
+html:not(.blocks, .chemicalGroupBlock) td:has(> .element, > .lanth-Act) > :is(.element, .lanth-Act):not(.elementStyle) {
+	box-shadow: none;
+}
 /**-----------------------------------------------**/
 .periodicTable {
 	display: flex;
@@ -377,15 +393,15 @@ html:not([class*="blocks"]):not([class*="chemicalGroupBlock"]) .lanth-Act {
 	box-shadow: var(--borderShadowColorEffect);
 }
 
-html:not([class*="blocks"]) .highlightElementBlocks {
+html:not(.blocks) .highlightElementBlocks {
 	display: none;
 }
 
-html:not([class*="chemicalGroupBlock"]) .highlightElementClasses {
+html:not(.chemicalGroupBlock) .highlightElementClasses {
 	display: none;
 }
 
-html:not([class*="state"]) .highlightElementState {
+html:not(.state) .highlightElementState {
 	display: none;
 }
 
