--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -400,12 +400,13 @@ html:not(.blocks, .chemicalGroupBlock) .lanth-Act {
 	background: transparent;
 }
 
-html:not(.blocks, .chemicalGroupBlock) td:has(> .element, > .lanth-Act) {
+html:not(.blocks, .chemicalGroupBlock) td:has(> .element) {
 	padding: 0;
 }
 
-html:not(.blocks, .chemicalGroupBlock) td:has(> .element, > .lanth-Act) > :is(.element, .lanth-Act):not(.elementStyle):not(:hover):not(:active) {
+html:not(.blocks, .chemicalGroupBlock) td:has(> .element) > :is(.element):not(.elementStyle):not(:hover):not(:active) {
 	box-shadow: none;
+	padding: 4px;
 }
 /**-----------------------------------------------**/
 .periodicTable {
